# ENPM662_Group5

./: README.md  proportional_controller.py
Final_Package/: display_part1.rviz
cad/: Back_Left_Rim.SLDPRT  Back_Left_Tire.SLDPRT  Back_Right_Rim.SLDPRT  Back_Right_Tire.SLDPRT  Body.SLDPRT  Front_Left_Rim.SLDPRT  Front_Left_Tire.SLDPRT  Front_Right_Rim.SLDPRT  Front_Right_Tire.SLDPRT  Full_Assembly.SLDASM  Left_Steering_Bracket.SLDPRT  LiDAR.SLDPRT  Right_Steering_Bracket.SLDPRT  Trailer.SLDPRT  Trailer_Left_Rim.SLDPRT  Trailer_Left_Tire.SLDPRT  Trailer_Right_Rim.SLDPRT  Trailer_Right_Tire.SLDPRT  humanoid_arm.SLDASM  joint_cap.SLDPRT  link_2.SLDPRT  link_3_mod.SLDPRT  pedestal.SLDPRT  (+1 more)
humanoid/: CMakeLists.txt  package.xml
humanoid/cad/: Head.SLDPRT  Shouler_Joint.SLDPRT  ankle_joint.SLDPRT  foot.SLDPRT  frame(torso).SLDPRT  hip_joint.SLDPRT  hip_to_thigh.SLDPRT  humanoid_assembly_revA.SLDASM  joint_pin.SLDPRT  lidar.SLDPRT  lower_arm.SLDPRT  lower_leg.SLDPRT  upper_arm.SLDPRT  wheel.SLDPRT  wheel_joint.SLDPRT  wrist_joint.SLDPRT
humanoid/config/: control.yaml
humanoid/launch/: debug.launch.py  debug_empty.launch.py  display.launch.py  gazebo.launch.py  spawn_robot_ros2.launch.py
humanoid/meshes/: base_link.STL  hd_link.STL  l_ank_1_link.STL  l_ank_2_link.STL  l_elb_1_link.STL  l_elb_2_link.STL  l_hp_1_link.STL  l_hp_2_link.STL  l_kn_link.STL  l_shldr_1_link.STL  l_shldr_2_link.STL  l_str_link.STL  l_wl_link.STL  l_wst_link.STL  ldr_link.STL  r_ank_1_link.STL  r_ank_2_link.STL  r_elb_1_link.STL  r_elb_2_link.STL  r_hp_1_link.STL  r_hp_2_link.STL  r_kn_link.STL  r_shldr_1_link.STL  r_shldr_2_link.STL  r_str_link.STL  r_wl_link.STL  r_wst_link.STL
humanoid/rviz/: display_default.rviz  display_exam.rviz
humanoid/urdf/: humanoid.csv  humanoid.urdf.xacro
humanoid/worlds/: empty_world.world  stopsign.world
(+135 files in other folders)
